# shifts-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sitecustomize.py  telegram_client.py  user_reminders.json  user_shift_times.json  user_timezone.json  utils.py
Clients/: CalenderClient.py  MainClient.py  TelegramClient.py  __init__.py
Config/: __init__.py  config.py  menus.py  shift_times.py
Handlers/: PreferencesHandler.py  __init__.py
Handlers/Preferences/: RemindersHandler.py  ShiftTimesHandler.py  TemplatesHandler.py  TimezoneHandler.py  __init__.py
docs/: flow-diagram.md
examples/: preferences_integration_example.py
tests/: smoke_telegram.py  test_calendar_client.py  test_modular_preferences.py  test_telegram_client.py
